# ic3

./: .gitignore  CMakeLists.txt  README.md  aigToDot.sh  aigToZ3.cpp  aigToZ3.h  ic3.cpp  ic3.h  main.cpp  run.sh
aiger/: makefile
benchmarks/safe/: test.aig
benchmarks/unsafe/: test1.aig  test2.aig
